[package]
name = "rasciigraph"
version = "0.2.0"
edition = "2018"
authors = ["Orhan Balci <orhanbalci@gmail.com>"]
description="Utility function to plot ascii graphs"
homepage="https://github.com/orhanbalci"
repository="https://github.com/orhanbalci/rasciigraph.git"
keywords=["ascii","graph"]
license="MIT"
readme="README.md"

[dependencies]
